# chatterbox-v2

./: pyproject.toml
src/chatterbox/: mtl_tts.py  tts.py
